Repaired stylng error that prevented jumbotron from appearing on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,27 +106,29 @@ a.navbar-brand {
 .jumbotron-container {
     height: 100vh;
 
-    background: url('../images/infinityphoto.jpg') no-repeat bottom center fixed;
+    background: url('../images/jumbotron.jpg') no-repeat bottom right fixed;
     background-size: cover;
     
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
 
-    display: -webkit-box;
-
-    display: -ms-flexbox;
-
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    align-items: center;
+    justify-content: center;
 
     position: relative;
     overflow: hidden;
+}
+
+.jumbotron-overlay {
+   position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(1, 10, 10, .65);
+    overflow: visible;
 }
 
 .jumbotron button {
